# harmonic-analysis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .quality-config.yaml  .quality-config.yaml.backup  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  EDUCATIONAL_CONTENT_ANALYSIS.md  EDUCATIONAL_MVP_COMPLETED.md  FUNCTIONALITY_MATRIX.md  IMPLEMENTATION_SUMMARY.md  MIGRATIONS.md  PROFILE_SUPPORT_STATUS.md  README.md  SECURITY.md  TESTING_STATUS.md  TODO.md  debug_backdoor.py  debug_dropdown_zindex.js  debug_intervals.py  debug_patterns.py  debug_stage_b.py  gpt_test_data.json  packages_to_upgrade.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_backdoor.py  test_glossary_integration.py  test_pattern_engine.py  test_stage_b.py
.github/workflows/: ci.yml  claude-code-review.yml  lint.yml  publish.yml  quality-adaptive.yml  release.yml
.junie/: guidelines.md
demo/: README.md  __init__.py  full_library_demo.py  package.json  requirements.txt  start_demo.sh
demo/api/: __init__.py
demo/backend/: __init__.py  formatting.py  language.json  main.py  requirements.txt
demo/backend/rest_api/: __init__.py  models.py  routes.py
demo/frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js.v3-backup
demo/frontend/public/: index.html
demo/frontend/src/: App.css  App.js  App.tsx  index.css
demo/lib/: __init__.py  analysis_orchestration.py  chord_detection.py  constants.py  key_conversion.py  music_file_processing.py
demo/tests/: __init__.py
demo/tests/api/: __init__.py  test_rest_api.py
demo/ui/: __init__.py  html_formatters.py
docs/: API_GUIDE.md  ARCHITECTURE.md  CALIBRATION_GUIDE.md  CONFIDENCE_CALIBRATION.md  CORPUS_MINING_GUIDE.md  DEMO_REFACTORING_PLAN.md  DEVELOPMENT.md  GLOSSARY_FEATURE_TERMS.md  MODAL_PATTERN_IMPROVEMENTS.md  MULTI_PROFILE_ANALYSIS_PROPOSAL.md  PATTERN_DSL_REFERENCE.md  PATTERN_ENGINE_ARCHITECTURE.md  PROFILE_APPROACHES_COMPARISON.md  README.md  TESTING.md  TROUBLESHOOTING.md  enhancements-with-music21.md
docs/adr/: README.md
docs/architecture/: comparitive_music21_v_ha.md  music21_acceptance_criteria.md  music21_integration_strategy.md  scale_mode_integration_status.md
docs/explanation/: corpus-mining.md
docs/how-to/: README.md  api-integration.md  debugging-patterns.md  music21-integration.md
docs/reference/: api-quick-reference.md  api-reference.md  glossary.md
docs/resources/: omt_viewer.html
docs/tutorials/: README.md  getting-started.md
examples/: 01_getting_started.ipynb  02_pattern_recognition.ipynb  03_modal_analysis.ipynb  04_character_analysis.ipynb  README.md  character_analysis_demo.py  harmonic_analysis_tutorial.ipynb
scripts/: README.md  confidence_calibration_analysis.py  export_baseline.py  export_test_failures.py  generate_comprehensive_multi_layer_tests.py  music_expert_review.py  quality_check.py  setup_dev_env.py  smoke_test_iteration_15.py  validate-adaptive.sh  zip_project.py
src/harmonic_analysis/: __init__.py  __main__.py  algorithms.py  analysis.py  analysis_types.py  character.py  chromatic.py  cli.py  dto.py  midi.py  scale_melody_analysis.py  scales.py  theory.py  types.py
src/harmonic_analysis/api/: __init__.py  analysis.py  musical_data.py
tests/: conftest.py  edge_case_warnings.py  test_algorithmic_suggestions.py  test_bidirectional_integration.py  test_bidirectional_suggestions.py  test_character_analysis.py  test_chord_parser.py  test_chromatic_analysis.py  test_comprehensive_multi_layer_validation.py  test_edge_case_behavior.py  test_enhanced_modal_analyzer.py  test_evidence_type_consistency.py  test_inversion_bidirectional.py  test_inversion_regression.py  test_modal_label_overwriting_bug.py  test_multi_layer_analysis.py  test_multiple_interpretation_service.py  test_open_music_theory_validation.py  test_pattern_engine.py  test_romanization.py
tests/api/: test_analysis_key_requirement.py  test_character_analysis.py  test_rest_api.py
tests/chromatic/: test_chromatic_analysis.py  test_mandatory_chromatic_functionality.py
tests/core/: test_api_shapes.py  test_api_types.py  test_calibration_quality_gates.py  test_glossary_integration.py  test_key_context_validation.py  test_unified_pattern_engine.py
tests/data/: pattern_tests.json  stage_c_voice_leading_tests.json
tests/demo/: test_demo_key_validation.py
tests/edge_cases/: test_calibration_edge_cases.py
tests/educational/: __init__.py  test_educational_service.py  test_knowledge_base.py  test_pattern_merger.py
tests/fixtures/: utils.py
tests/helpers/: calibration.py
tests/integration/: test_arbitration_modal_vs_functional.py  test_arbitration_policy_thresholds.py  test_calibration_baseline_validation.py  test_calibration_integration.py  test_comprehensive_analysis.py  test_confidence_against_baseline.py  test_edge_case_behavior.py  test_melody_analysis.py  test_multi_layer_analysis.py  test_music21_adapter.py  test_music21_file_upload.py  test_music21_regression.py  test_open_music_theory_comprehensive.py  test_real_world_progressions.py  test_roman_numeral_analysis.py  test_scale_analysis.py  test_scale_melody_integration.py  test_section_aware_functionality.py  test_unified_arbitration_thresholds.py  test_unified_vs_legacy_parity.py
tests/integrations/: __init__.py  test_music21_regression.py
tests/patterns/: conftest.py  test_golden_patterns.py  test_loader_validation.py  test_matchers_sequences.py  test_melodic_scale_patterns.py
tests/performance/: test_calibration_performance.py
tests/services/: test_bidirectional_integration.py  test_bidirectional_suggestions.py  test_calibration_service.py  test_unified_pattern_service.py
tests/unit/: test_chord_logic.py  test_comprehensive_analysis.py
tests/utils/: __init__.py  debug_helpers.py  test_debug_utils.py  test_deprecation_warnings.py  test_romanization.py  unified_debug.py
tools/: README.md  convert_patterns.py  converted_patterns.json  debug_unified.py  sam.py
tools/calibration/: README_CALIBRATION.md  calibration_pipeline.py  calibration_utils.py
(+138 files in other folders)
